syntax = "proto3";

package message;

message Message {
  uint32 from = 1; // 发送者
  uint32 to = 2; // 接受者
  string content = 3; // 消息内容
  uint32 type = 4; // 群组还是单聊，群组是500人以下群还是500人以上群？
  uint32 msg_type = 5; // 聊天类型，直接聊天、回复、文件信息？
  optional int64 extend = 6; // 消息拓展内容（回复消息的原消息id）
  int64 time = 7;
}
